--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.1.0",
-    "turbo": "canary"
+    "prettier": "^3.1.0"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
